--- a/Eashire/package.json
+++ b/Eashire/package.json
@@ -24,6 +24,7 @@
 		"flowbite": "^1.5.1",
 		"http-errors": "^1.8.0",
 		"isomorphic-fetch": "^3.0.0",
+		"module-alias": "^2.2.2",
 		"morgan": "~1.9.1",
 		"mysql2": "^2.3.3",
 		"postcss-cli": "^10.0.0",
