--- a/Eashire/package.json
+++ b/Eashire/package.json
@@ -24,6 +24,7 @@
 		"flowbite": "^1.5.1",
 		"http-errors": "^1.8.0",
 		"isomorphic-fetch": "^3.0.0",
+		"jsonwebtoken": "^8.5.1",
 		"module-alias": "^2.2.2",
 		"morgan": "~1.9.1",
 		"mysql2": "^2.3.3",
@@ -36,7 +37,7 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.4.7",
-		"eslint": "^8.27.0",
+		"eslint": "8.22",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-import": "^2.26.0",
