--- a/Eashire/utils/azureService/azure.config.json
+++ b/Eashire/utils/azureService/azure.config.json
@@ -1,15 +1,18 @@
 {
 	"development": {
+		"IT_GROUP_NAME": "sg-IT",
 		"RH_GROUP_NAME": "HR-S",
 		"MANAGER_GROUP_NAME": "MANAGER-S",
 		"FINANCE_GROUP_NAME": "FINANCE-S"
 	},
 	"test": {
+		"IT_GROUP_NAME": "sg-IT",
 		"RH_GROUP_NAME": "HR-S",
 		"MANAGER_GROUP_NAME": "MANAGER-S",
 		"FINANCE_GROUP_NAME": "FINANCE-S"
 	},
 	"production": {
+		"IT_GROUP_NAME": "sg-IT",
 		"RH_GROUP_NAME": "HR-S",
 		"MANAGER_GROUP_NAME": "MANAGER-S",
 		"FINANCE_GROUP_NAME": "FINANCE-S"
