feat: accout creation demand

--- a/Eashire/utils/azureService/azure.config.json
+++ b/Eashire/utils/azureService/azure.config.json
@@ -3,18 +3,30 @@
 		"IT_GROUP_NAME": "sg-IT",
 		"RH_GROUP_NAME": "HR-S",
 		"MANAGER_GROUP_NAME": "MANAGER-S",
-		"FINANCE_GROUP_NAME": "FINANCE-S"
+		"FINANCE_GROUP_NAME": "FINANCE-S",
+		"domains": [
+			"@eashire.com",
+			"@M365x54258280.OnMicrosoft.com"
+		]
 	},
 	"test": {
 		"IT_GROUP_NAME": "sg-IT",
 		"RH_GROUP_NAME": "HR-S",
 		"MANAGER_GROUP_NAME": "MANAGER-S",
-		"FINANCE_GROUP_NAME": "FINANCE-S"
+		"FINANCE_GROUP_NAME": "FINANCE-S",
+		"domains": [
+			"@eashire.com",
+			"@M365x54258280.OnMicrosoft.com"
+		]
 	},
 	"production": {
 		"IT_GROUP_NAME": "sg-IT",
 		"RH_GROUP_NAME": "HR-S",
 		"MANAGER_GROUP_NAME": "MANAGER-S",
-		"FINANCE_GROUP_NAME": "FINANCE-S"
+		"FINANCE_GROUP_NAME": "FINANCE-S",
+		"domains": [
+			"@eashire.com",
+			"@M365x54258280.OnMicrosoft.com"
+		]
 	}
 }
