--- a/Eashire/package.json
+++ b/Eashire/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@azure/msal-node": "^1.3.0",
 		"@microsoft/microsoft-graph-client": "^3.0.0",
+		"axios": "^1.3.3",
 		"connect-flash": "^0.1.1",
 		"cookie-parser": "~1.4.4",
 		"cors": "^2.8.5",
