--- a/Eashire/package.json
+++ b/Eashire/package.json
@@ -27,6 +27,7 @@
 		"isomorphic-fetch": "^3.0.0",
 		"jsonwebtoken": "^8.5.1",
 		"module-alias": "^2.2.2",
+		"moment-timezone": "^0.5.43",
 		"morgan": "~1.9.1",
 		"mysql2": "^2.3.3",
 		"postcss-cli": "^10.0.0",
