--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,6 @@ deploy:
   script:
     - chmod +x ./env.sh
     - ./env.sh
-    - cd exp_must_azure_test
+    - cd Eashire
     - npm install
     - pm2 restart app
