--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,12 @@
 stages:
    - deploy
 deploy:
-
   stage: deploy
   script:
     - chmod +x ./env.sh
     - ./env.sh
     - cd Eashire
     - npm install
-    - pm2 start ./bin/www
+    - pm2 restart ./bin/www
   only: 
-    - master
+    - main
