--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,9 @@ deploy:
   stage: deploy
   script:
     - chmod +x ./env.sh
+    - chmod +x ./bot_env.sh
     - ./env.sh
+    - source ./bot_env.sh
     - cd Eashire
     - npm install
     - pm2 restart ./bin/www
