--- a/chatbot-back/package.json
+++ b/chatbot-back/package.json
@@ -18,15 +18,15 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@types/socket.io": "^3.0.2",
     "@pinecone-database/pinecone": "0.0.14",
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-correlation-id": "^2.0.1",
+    "langchain": "0.0.82",
     "openai": "^3.3.0",
-    "socket.io": "^4.6.2",
-    "langchain": "0.0.82"
+    "socket.io": "^4.6.2"
   }
 }
