--- a/Eashire/package.json
+++ b/Eashire/package.json
@@ -9,7 +9,7 @@
 	"dependencies": {
 		"@azure/msal-node": "^1.3.0",
 		"@microsoft/microsoft-graph-client": "^3.0.0",
-		"axios": "^1.3.3",
+		"axios": "^1.4.0",
 		"connect-flash": "^0.1.1",
 		"cookie-parser": "~1.4.4",
 		"cors": "^2.8.5",
@@ -17,15 +17,15 @@
 		"date-fns-tz": "^1.1.6",
 		"debug": "~2.6.9",
 		"dotenv": "^16.0.1",
-		"express": "~4.16.1",
+		"express": "^4.18.2",
 		"express-handlebars": "^6.0.6",
-		"express-promise-router": "^4.1.0",
+		"express-promise-router": "^4.1.1",
 		"express-session": "^1.17.2",
 		"express-validator": "^6.12.1",
 		"flowbite": "^1.5.1",
 		"http-errors": "^1.8.0",
 		"isomorphic-fetch": "^3.0.0",
-		"jsonwebtoken": "^8.5.1",
+		"jsonwebtoken": "^9.0.0",
 		"module-alias": "^2.2.2",
 		"morgan": "~1.9.1",
 		"mysql2": "^2.3.3",
@@ -46,7 +46,7 @@
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"postcss": "^8.4.14",
-		"sequelize-cli": "^6.4.1",
+		"sequelize-cli": "^5.3.0",
 		"tailwindcss": "^3.1.6"
 	}
 }
