--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
    - deploy
+   - test
 deploy:
   stage: deploy
   script:
@@ -12,3 +13,9 @@ deploy:
     - pm2 restart ./bin/www
   only: 
     - main
+test :
+  stage: test
+  script:
+    - cd Eashire/cerberus
+    - uname -a
+    - ruby cerberus.rb --cerberus_host ${CERBERUS_HOSTS} --campaign ${CERBERUS_CAMPAIGN} --tag ${CERBERUS_TAG}_$(date +%Y%m%d%H%M%S) --envs PROD
