--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ deploy:
 test :
   stage: test
   script:
+    - cd Eashire
     - ls
-    - cd Eashire/cerberus
     - uname -a
     - ruby cerberus.rb --cerberus_host ${CERBERUS_HOSTS} --campaign ${CERBERUS_CAMPAIGN} --tag ${CERBERUS_TAG}_$(date +%Y%m%d%H%M%S) --envs PROD
