--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,4 @@ deploy:
 test :
   stage: test
   script:
-    - cd cerberus
-    - ls
-    - uname -a
-    - ruby cerberus.rb --cerberus_host ${CERBERUS_HOSTS} --campaign ${CERBERUS_CAMPAIGN} --tag ${CERBERUS_TAG}_$(date +%Y%m%d%H%M%S) --envs PROD
+    - curl -X POST "${CERBERUS_HOSTS}" -H "accept: application/json" -H "X-API-KEY: ${CERBERUS_API_KEY}" -H "X-API-VERSION: 1" -H "Content-Type: application/json" -d "{ \"testcases\": [ { \"testFolderId\": \"Eashire\", \"testcaseId\": \"rh_validation\" } ], \"countries\": [ \"FR\" ], \"environments\": [ \"PROD\" ], \"robots\": [ \"CerberusChrome\" ], \"screenshot\": 0, \"video\": 0, \"verbose\": 0, \"timeout\": 0, \"pageSource\": 0, \"robotLog\": 0, \"consoleLog\": 0, \"retries\": 0, \"priority\": 0, \"manualUrl\": 0}"
