--- a/Eashire/package.json
+++ b/Eashire/package.json
@@ -29,6 +29,7 @@
 		"module-alias": "^2.2.2",
 		"morgan": "~1.9.1",
 		"mysql2": "^2.3.3",
+		"nodemailer": "^6.9.3",
 		"postcss-cli": "^10.0.0",
 		"sequelize": "^6.20.1",
 		"serve-index": "^1.9.1",
