--- a/Eashire/package.json
+++ b/Eashire/package.json
@@ -13,6 +13,7 @@
 		"connect-flash": "^0.1.1",
 		"cookie-parser": "~1.4.4",
 		"cors": "^2.8.5",
+		"crypto": "^1.0.1",
 		"date-fns": "^2.23.0",
 		"date-fns-tz": "^1.1.6",
 		"debug": "~2.6.9",
@@ -28,6 +29,7 @@
 		"jsonwebtoken": "^9.0.0",
 		"module-alias": "^2.2.2",
 		"morgan": "~1.9.1",
+		"multer": "^1.4.5-lts.1",
 		"mysql2": "^2.3.3",
 		"nodemailer": "^6.9.3",
 		"postcss-cli": "^10.0.0",
