add database reset

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
    - deploy
-   - test
+  #  - test
 deploy:
   stage: deploy
   script:
@@ -11,6 +11,10 @@ deploy:
     - cd Eashire
     - npm install
     - pm2 restart ./bin/www
+    - cd database
+    - npm install
+    - npx sequelize-cli db:seed --seed 20221223105116-ficheposte.js
+    - npx sequelize-cli db:seed --seed 20230113092621-candidature.js
   only: 
     - main
 test :
