--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
    - deploy
-  #  - test
+   - test
 deploy:
   stage: deploy
   script:
@@ -17,10 +17,10 @@ deploy:
     - npx sequelize-cli db:seed --seed 20230113092621-candidature.js
   only: 
     - main
-# test :
-#   stage: test
-#   script:
-#     - chmod +x ./cerberus.sh
-#     - ./cerberus.sh
+test :
+  stage: test
+  script:
+    - chmod +x ./cerberus.sh
+    - ./cerberus.sh
 # bonjour
      
