--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,13 +9,14 @@ deploy:
     - ./env.sh
     - source ./bot_env.sh
     - cd Eashire
-    - npm install
     - pm2 restart ./bin/www
     - npm install
     - cd database
     - npm install
     - npx sequelize-cli db:seed --seed 20221223105116-ficheposte.js
     - npx sequelize-cli db:seed --seed 20230113092621-candidature.js
+    - cd ../Eashire
+    - npm install
   only: 
     - main
 test :
